tests/syntax_error/no_break_space.jou
   # Error: source file contains Unicode whitespace character U+000000A0 NO-BREAK SPACE
